# k8s-csi-restarter

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy-image.yaml
src/: main.rs
