[package]
name = "k8s-csi-restarter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
color-eyre = "0.6.3"
config = "0.14.0"
either = "1.10.0"
eyre = "0.6.12"
futures = "0.3.30"
k8s-openapi = { version = "0.21.1", features = ["latest"] }
kube = { version = "0.89.0", features = ["runtime", "derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
