[package]
name = "k8s-csi-restarter"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Vladimir Romashchenko <eaglesemanation@gmail.com>"]
keywords = ["kubernetes", "k8s"]
repository = "https://github.com/eaglesemanation/k8s-csi-restarter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
color-eyre = "0.6"
config = "0.14"
either = "1.10"
eyre = "0.6"
futures = "0.3"
k8s-openapi = { version = "0.21.1", features = ["latest"] }
kube = "0.89"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tower-http = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
